# parrotlm

./: .env.local  .gitignore  README.md  download.py  error.txt  example_prompts.txt  infer.py  inferences_20251011_205300.csv  inferences_20251012_114644.csv  inferences_20251012_114801.csv  inferences_medium_prompts_file.csv  pretokenize.py  prompts.txt  pyproject.toml  size.py  test_loss.py  train.py  train_tokenizer.py
analyze/: README.md  add_memory_counters.py  analyze_profile.py  get_peak_memory.py  memory_timeline.py
configs/: example_tokenizer.yml  fineweb_edu_4b.yml  tiny_tales_6.yml  tinystories_dataset.yml  tinystories_tokenizer.yml
configs/training/: example_training.yml  fineweb_large.yml  tiny_tales_6_finetune.yml  tinystories_large.yml  tinystories_large_fast.yml  tinystories_medium.yml  tinystories_moe.yml  tinystories_small.yml  tinystories_tiny.yml
local/configs/: example_dataset.yml  example_tokenizer.yml  tinystories_tokenizer.yml
local/configs/training/: example_training.yml  tinystories_medium.yml  tinystories_moe.yml  tinystories_small.yml  tinystories_tiny.yml
src/: __init__.py  config.py  exceptions.py  loader.py  processor.py  tokenizer.py  tokenizer_training.py
src/loaders/: __init__.py  base.py  factory.py  huggingface_loader.py  local_loaders.py  sampling.py
src/train/: __init__.py  checkpoints.py  config.py  inference.py  metrics.py  model.py  muon.py  pipeline.py
