[project]
name = "datasets-utility"
version = "0.1.0"
description = "A utility to create datasets from various sources with train/validation splits"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "tokenizers>=0.13.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "textual>=0.47.0",
    "textual-plotext>=0.2.0",
    "psutil>=5.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]
